--- a/.env
+++ b/.env
@@ -1,12 +1,16 @@
-SESSION_ID=
+SESSION_ID=Bmwmd$AFyQUia7
 AUTO_STATUS_SEEN=true
 REJECT_CALL=false
 MODE=public
 WELCOME=false
-AUTO_READ=false
-AUTO_TYPING=false
-AUTO_RECORDING=false
-ALWAYS_ONLINE=false
-AUTO_BLOCK=true
-AUTO_REACT=false
-PREFIX=
+AUTO_READ=true
+AUTO_TYPING=true
+AUTO_RECORDING=true
+ALWAYS_ONLINE=true
+AUTO_BLOCK=false
+AUTO_REACT=true
+PREFIX=+
+AUTO_REPLY=true
+NAME=flower-md
+CHAT_BOT=true
+ALIVE=true
