--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ AUTO_TYPING=true
 AUTO_RECORDING=true
 ALWAYS_ONLINE=true
 AUTO_BLOCK=false
-AUTO_REACT=true
+AUTO_REACT=false
 PREFIX=+
 AUTO_REPLY=true
 NAME=flower-md
